--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
           <div class="col-md-8">
             <h3>Brandon Durham</h3>
-            <p>Hi! I’m a passionate web developer learning full-stack development and building cool web apps.</p>
+            <p>Hi! I’m a beginer developer looking to gain more knowledge as I continue on this journey!.</p>
           </div>
         </div>
       </div>
@@ -68,10 +68,7 @@
     <!-- Projects Section -->
     <section id="projects" class="mt-5">
       <h2>Projects</h2>
-      <ul>
-        <li><a href="#">Personal Portfolio</a></li>
-        <li><a href="#">JavaScript Game</a></li>
-        <li><a href="#">API Weather App</a></li>
+      <ul></ul>
       </ul>
     </section>
 
