--- a/index.html
+++ b/index.html
@@ -5,49 +5,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Developer Profile</title>
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="styles/normalize.css">
+
+  <!-- Normalize CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <!-- Custom Styles -->
   <link rel="stylesheet" href="styles/styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Scripts -->
-  <script src="scripts/script.js" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
-  <!-- Navbar -->
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <i class="bi bi-person-circle"></i> DevProfile
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="#profile">Profile</a></li>
-            <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-            <li class="nav-item"><a class="nav-link" href="#resources">Resources</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
 
-  <!-- Blog Section -->
-  <main class="container mt-4">
-    <section id="blog">
-      <h2>Blog Entries</h2>
-      <div id="blog-entries">
-        <article class="card my-2 p-3">
-          <h5>My First Blog Post</h5>
-          <p>Excited to start my web dev journey. So much to learn, but I’m ready!</p>
-        </article>
+  <!-- Top Nav Header -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><i class="bi bi-code-slash"></i> DevProfile</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="#profile">Profile</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#resources">Resources</a></li>
+        </ul>
       </div>
-    </section>
+    </div>
+  </nav>
+
+  <div class="container mt-4">
+    <!-- Blog Section -->
+    <section id="blog">
+  <h2>Blog</h2>
+  <article class="card p-3 mb-3">
+    <h5>Crypto Thoughts</h5>
+    <p>Exploring the world of blockchain and decentralized finance is a daily adventure.</p>
+  </article>
+  <article class="card p-3 mb-3">
+    <h5>Wanderlust</h5>
+    <p>There's nothing like hopping on a train and seeing a new city for the first time.</p>
+  </article>
+  <article class="card p-3 mb-3">
+    <h5>Car Culture</h5>
+    <p>If it isn't American Muscle what are you doing?</p>
+  </article>
+</section>
 
     <!-- Developer Profile Section -->
     <section id="profile" class="mt-5">
@@ -59,7 +67,7 @@
           </div>
           <div class="col-md-8">
             <h3>Brandon Durham</h3>
-            <p>Hi! I’m a beginer developer looking to gain more knowledge as I continue on this journey!.</p>
+            <p>Full-stack developer passionate about clean code and solving problems with web technologies.</p>
           </div>
         </div>
       </div>
@@ -68,35 +76,40 @@
     <!-- Projects Section -->
     <section id="projects" class="mt-5">
       <h2>Projects</h2>
-      <ul></ul>
+      <ul>
+        <li><a href="#">Portfolio Website</a></li>
+        <li><a href="#">Crypto Price Tracker</a></li>
+        <li><a href="#">Fitness App</a></li>
       </ul>
     </section>
 
     <!-- Resources Section -->
     <section id="resources" class="mt-5">
-      <h2>Resources</h2>
+      <h2>Dev Resources</h2>
       <ul>
         <li><a href="https://developer.mozilla.org">MDN Web Docs</a></li>
+        <li><a href="https://stackoverflow.com">Stack Overflow</a></li>
         <li><a href="https://getbootstrap.com">Bootstrap Docs</a></li>
-        <li><a href="https://css-tricks.com">CSS Tricks</a></li>
       </ul>
     </section>
 
-    <!-- Button for Functionality -->
+    <!-- Interactive Button -->
     <div class="mt-4">
       <button id="change-theme" class="btn btn-primary">
         <i class="bi bi-lightbulb"></i> Toggle Theme
       </button>
     </div>
-  </main>
+  </div>
 
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-4 mt-5">
     <small>&copy; 2025 Brandon Durham | All Rights Reserved</small>
   </footer>
 
-  <!-- Bootstrap Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
+
