--- a/index.html
+++ b/index.html
@@ -62,12 +62,42 @@
       </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="mt-5">
-      <h2>Projects</h2>
+     <h2>Projects</h2>
       <ul>
-        <li><a href="#">Portfolio Website</a></li>
       </ul>
     </section>
+   <section id="projects" class="mt-5">
+  <!-- Project Card: Portfolio Website -->
+  <div class="card mb-4" style="max-width: 540px; margin: auto;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="images/portfolioScreenshot.jpeg" class="img-fluid rounded-start" alt="Portfolio website preview">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">🌐 Portfolio Website</h5>
+          <p class="card-text">The website you see right now! Designed to help get to know me a little better as well as show off a few cool things here and there.</p>
+          <a href="https://github.com/bdurham130/portfolio" class="btn btn-outline-secondary btn-sm" target="_blank">💻 Source Code</a>
+        </div>
+      </div>
+    </div>
+  </div>
+      <div class="card mb-4" style="max-width: 540px; margin: auto;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="images/emojiGameScreenshot.jpeg" class="img-fluid rounded-start" alt="Emoji Memory Match preview">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">🎮 Emoji Memory Match</h5>
+        <p class="card-text">A fast-paced emoji flip game that tracks your score with a twist. Built with HTML, CSS, jQuery, and Bootstrap.</p>
+        <a href="https://bdurham130.github.io/emoji-memory-match/" class="btn btn-primary btn-sm" target="_blank">▶️ Play the Game</a>
+        <a href="https://github.com/bdurham130/emoji-memory-match" class="btn btn-outline-secondary btn-sm" target="_blank">💻 Source Code</a>
+      </div>
+    </div>
+  </div>
+</div>
+      
 
     <!-- Resources Section -->
     <section id="resources" class="mt-5">
@@ -90,6 +120,11 @@
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-4 mt-5">
     <small>&copy; 2025 Brandon Durham</small>
+    <p>
+    <a href="https://github.com/bdurham130/block01" target="_blank">Dev Profile Source Code</a> |
+    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fbdurham130.github.io%2Fblock01%2F" target="_blank">Check Validity</a> |
+    <a href="https://wave.webaim.org/report#/https://bdurham130.github.io/block01/" target="_blank">Accessibility Check</a>
+  </p>
   </footer>
 
   <!-- Scripts -->
@@ -98,3 +133,4 @@
 </body>
 
 </html>
+
