--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="card-body">
           <h5 class="card-title">🌐 Portfolio Website</h5>
           <p class="card-text">The website you see right now! Designed to help get to know me a little better as well as show off a few cool things here and there.</p>
-          <a href="https://github.com/bdurham130/block01" class="btn btn-outline-secondary btn-sm" target="_blank">💻 Source Code</a>
+          <a href="https://github.com/bdurham130/Dev-Profile" class="btn btn-outline-secondary btn-sm" target="_blank">💻 Source Code</a>
         </div>
       </div>
     </div>
