--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <footer class="bg-dark text-white text-center py-4 mt-5">
     <small>&copy; 2025 Brandon Durham</small>
     <p>
-    <a href="https://github.com/bdurham130/block01" target="_blank">Dev Profile Source Code</a> |
+    <a href="https://github.com/bdurham130/Dev-Profile" target="_blank">Dev Profile Source Code</a> |
     <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fbdurham130.github.io%2Fblock01%2F" target="_blank">Check Validity</a> |
     <a href="https://wave.webaim.org/report#/https://bdurham130.github.io/block01/" target="_blank">Accessibility Check</a>
   </p>
