--- a/index.html
+++ b/index.html
@@ -42,9 +42,14 @@
   <div class="container mt-4">
     <!-- Blog Section -->
     <section id="blog">
-      <h2>Blog</h2>
-    </section>
-
+  <h2>Blog</h2>
+  <div class="mt-3">
+    <a href="https://bdurham130.github.io/dev-blog-admin/" target="_blank" class="btn btn-outline-primary">
+      <i class="bi bi-journal-text"></i> Visit Blog Admin
+    </a>
+  </div>
+</section>
+    
     <!-- Profile Section -->
     <section id="profile" class="mt-5">
         <h2>About Me</h2>
