--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <!-- Blog Section -->
     <section id="blog">
   <h2>Blog</h2>
-  <div class="mt-3">
-    <a href="https://bdurham130.github.io/dev-blog-admin/" target="_blank" class="btn btn-outline-primary">
-      <i class="bi bi-journal-text"></i> Visit Blog Admin
+  <div class="mt-2">
+    <a href="https://bdurham130.github.io/dev-blog-admin/" target="_blank" class="btn btn-primary btn-sm">
+      📝 Visit my blog page!
     </a>
   </div>
 </section>
